implement api/users/email-verification/{emailVerificationToken} endpoint.
