# app/Http/Controllers/UserController.php
@@ -3,8 +3,8 @@
 namespace App\Http\Controllers;
 
 use App\Http\Requests\Users\FirstAdminRegistrationRequest;
+use App\Services\Users\clsEmailVerification;
 use Illuminate\Http\JsonResponse;
-use Illuminate\Http\Request;
 use App\Http\Controllers\Controller;
 
 use App\Services\Users\clsFirstAdminRegistration;
@@ -13,13 +13,20 @@ class UserController extends Controller
 {
 
     public function __construct(
-        private clsFirstAdminRegistration $clsFirstAdminRegistration,
+        private clsFirstAdminRegistration $objFirstAdminRegistration,
+        private clsEmailVerification $objEmailVerification
     ) {
     }
 
 
     public function firstAdminRegistration(FirstAdminRegistrationRequest $request): JsonResponse
     {
-        return $this->clsFirstAdminRegistration->main($request);
+        return $this->objFirstAdminRegistration->main($request);
+    }
+
+
+    public function emailVerification(string $emailVerificationToken): JsonResponse
+    {
+        return $this->objEmailVerification->main($emailVerificationToken);
     }
 }
