# routes/ApiRoutes/users.route.php
@@ -7,3 +7,9 @@ Route::post(
     '/users/first-admin-register',
     [UserController::class, 'firstAdminRegistration']
 );
+
+Route::get(
+    '/users/email-verification/{emailVerificationToken}',
+    [UserController::class, 'emailVerification']
+)
+    ->name('users.email-verification');
